--- a/src/content/docs/cli-reference/index.mdx
+++ b/src/content/docs/cli-reference/index.mdx
@@ -175,6 +175,8 @@ devify auth:create-admin admin@example.com password123
 devify auth:list-users
 devify rbac:assign-role admin@example.com admin
 devify rbac:list-roles
+devify tenant:list
+devify tenant:create "My Company" owner@example.com
 ```
 
 ## Utility
