--- a/src/content/docs/getting-started/quick-start.mdx
+++ b/src/content/docs/getting-started/quick-start.mdx
@@ -13,7 +13,19 @@ import { Steps } from '@astrojs/starlight/components';
    devify init my-app
    ```
 
-   The CLI will ask you to select a database engine (PostgreSQL is recommended) and whether to include an example module.
+   The CLI walks you through an interactive setup:
+
+   - **Database** — PostgreSQL (default), MySQL, SQLite, MongoDB, or none
+   - **Cache** — In-memory (default), Redis, or BadgerDB
+   - **Mail** — SMTP (default, works with Mailpit), Resend, SendGrid, Postmark, SES, or none
+   - **Storage** — Local (default), S3, MinIO, SFTP, or WebDAV
+   - **Renderer** — Templ (default) or Go templates
+   - **Modules** — Multi-select checklist (auth pre-selected). Dependencies are resolved automatically — selecting billing auto-adds auth + tenant.
+   - **OAuth** — If auth is selected: Google, GitHub, Discord (optional)
+   - **PWA** — If PWA module is selected: offline, install prompt, camera, GPS, push notifications, and more
+   - **Frontend** — None, HTMX + Templ, React, Vue, Svelte, or SolidJS
+
+   After confirming your selections, the CLI scaffolds a fully wired project — `main.go`, config, `compose.yml`, `Makefile`, and starter UI.
 
 2. **Navigate into your project**
 
@@ -23,13 +35,15 @@ import { Steps } from '@astrojs/starlight/components';
 
 3. **Start services and the dev server**
 
-   The project includes a generated `compose.yml` and `Makefile`. One command starts your database, mail server, and the hot-reloading dev server:
+   The project includes a generated `compose.yml` and `Makefile`. One command starts everything:
 
    ```bash
    make dev
    ```
 
    This starts your database container (PostgreSQL by default), Mailpit for local email testing, and the Air hot-reload server. Your app is running at `http://localhost:4000`.
+
+   If you chose a SPA frontend (React, Vue, Svelte, SolidJS), use `make dev-all` to start both the Go backend and the frontend dev server.
 
    :::tip
    The `Makefile` auto-detects Podman or Docker — no configuration needed.
@@ -43,7 +57,7 @@ import { Steps } from '@astrojs/starlight/components';
    devify migrate
    ```
 
-   This runs all pending migrations in dependency order — auth tables first, then RBAC tables.
+   This runs all pending migrations in dependency order — auth tables first, then RBAC, tenant, and so on.
 
 6. **Create your first module**
 
@@ -67,10 +81,10 @@ import { Steps } from '@astrojs/starlight/components';
 
 ## What Just Happened?
 
-When you ran `devify dev`, the kernel:
+When you ran `make dev`, the kernel:
 
 1. Loaded config from `config/config.toml` with environment variable overrides
-2. Created infrastructure adapters (database, cache, router)
+2. Created infrastructure adapters (database, cache, mail, storage, router)
 3. Registered all modules and resolved dependencies via topological sort
 4. Ran pending migrations for each module in dependency order
 5. Initialized each module, wiring event subscriptions and services
